durst subnav 0 pad left on navbar_right_wrapper to prevent break on small device

--- a/app/assets/stylesheets/durst/durst.css.scss
+++ b/app/assets/stylesheets/durst/durst.css.scss
@@ -187,6 +187,9 @@ footer {
 		  background-color: transparent;
 		}
     }
+    #navbar_right_wrapper {
+      padding-left:0;
+    }
 }
 #content {
   #mapholder {
